--- a/goit-fe-course/html-css/module-1/Photoshop/index.html
+++ b/goit-fe-course/html-css/module-1/Photoshop/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li>
                         <article>
-                            <img src="img/baba.jpg" alt="пьяная женщина" width="420" height="280">
+                            <img src="img/Baba.jpg" alt="пьяная женщина" width="420" height="280">
                             <h2>
                                 More than just a music festival 
                             </h2>
