--- a/homework-01-02/index.html
+++ b/homework-01-02/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li>
                         <article>
-                            <img src="img/Baba.jpg" alt="пьяная женщина" width="420" height="280">
+                            <img src="img/baba.jpg" alt="пьяная женщина" width="420" height="280">
                             <h2>
                                 More than just a music festival 
                             </h2>
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                         <article>
-                            <img src="img/baba_v_shliape.jpg" alt="девушка в шерстяной шарке" width="420" height="280">
+                            <img src="img/baba_v_shliape.jpg" alt="девушка в шерстяной шапке" width="420" height="280">
                             <h2>
                                 A day exploring the Alps
                             </h2>
