--- a/homework-04/index.html
+++ b/homework-04/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>HomeWork4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -100,7 +100,7 @@
                 </li>
                 <li class="el1">
                     <a href="#" class="card clearfix">
-                        <img src="./img/Rectangle 50.jpg" alt="" height="280" width="255">
+                        <img src="./img/rectangle50.jpg" alt="" height="280" width="255">
                         <div class="cardtext clearfix">
                             <span class="name">yellow tshirt</span>
                             <span class="prise">$21</span>
