--- a/homework-04/index.html
+++ b/homework-04/index.html
@@ -120,15 +120,15 @@
         </div>
     </section>
     <section class="news">
-        <h3 class="head1">
+        <h2 class="head1">
             latest news
-        </h3>
+        </h2>
         <ul class="newsul">
             <li class="newsli">
-                <div class="block b1">
-                    <h4 class="head2">
+                <article class="block b1">
+                    <h3 class="head2">
                         Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                    </h4>
+                    </h3>
                     <p class="text">
                         Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
                         velit. Nam nec tellus a odio tincidun
@@ -136,13 +136,13 @@
                     <a class="load" href="#">
                         <div class="button">read more</div>
                     </a>
-                </div>
+                </article>
             </li>
             <li class="newsli">
-                <div class="block b2">
-                    <h4 class="head2">
+                <article class="block b2">
+                    <h3 class="head2">
                         Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                    </h4>
+                    </h3>
                     <p class="text">
                         Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
                         velit. Nam nec tellus a odio tincidun
@@ -150,13 +150,13 @@
                     <a class="load" href="#">
                         <div class="button">read more</div>
                     </a>
-                </div>
+                </article>
             </li>
             <li class="newsli">
-                <div class="block b3">
-                    <h4 class="head2">
+                <article class="block b3">
+                    <h3 class="head2">
                         Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-                    </h4>
+                    </h3>
                     <p class="text">
                         Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum
                         velit. Nam nec tellus a odio tincidun
@@ -166,7 +166,7 @@
                         <div class="button">read more</div>
                     </a>
 
-                </div>
+                </article>
             </li>
         </ul>
     </section>
