--- a/homework-06/index.html
+++ b/homework-06/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat|Roboto" rel="stylesheet">
 </head>
 
 <body>
@@ -39,42 +40,42 @@
             </h2>
             <div class="service6">
                 <div class="service s1">
-                    <img src="./img/icons/alarm.png" alt="">
+                    <img src="./img/icons/alarm.png" alt="тревога">
                     <div class="text">
                         <h3 class="microhead">photography</h3>
                         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                     </div>
                 </div>
                 <div class="service s2">
-                    <img src="./img/icons/line_graf.png" alt="">
+                    <img src="./img/icons/line_graf.png" alt="линейный график">
                     <div class="text">
                         <h3 class="microhead">web design</h3>
                         <p class="lorem">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                     </div>
                 </div>
                 <div class="service s3">
-                    <img src="./img/icons/computer_ok.png" alt="">
+                    <img src="./img/icons/computer_ok.png" alt="с компом всё ок">
                     <div class="text">
                         <h3 class="microhead">creativity</h3>
                         <p class="lorem">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                     </div>
                 </div>
                 <div class="service s4">
-                    <img src="./img/icons/book2.png" alt="">
+                    <img src="./img/icons/book2.png" alt="книга">
                     <div class="text">
                         <h3 class="microhead">seo</h3>
                         <p class="lorem">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="service s5">
-                    <img src="./img/icons/home.png" alt="">
+                    <img src="./img/icons/home.png" alt="дом">
                     <div class="text">
                         <h3 class="microhead">css/html</h3>
                         <p class="lorem">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
                     </div>
                 </div>
                 <div class="service s6">
-                    <img src="./img/icons/image.png" alt="">
+                    <img src="./img/icons/image.png" alt="что-то там">
                     <div class="text">
                         <h3 class="microhead">digital</h3>
                         <p class="lorem">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -95,27 +96,27 @@
                 <div class="slave">
                     <div class="slaveb">
                         <div class="train">
-                            <img src="./img/rab1.jpg" alt="" height="470" width="380">
+                            <img src="./img/rab1.jpg" alt="тело1" height="470" width="380">
                             <div class="shadow">
                                 <ul class="webs">
                                     <li class="webitem a1">
                                         <a href="">
-                                            <img src="./img/icons/facebook.png" alt="">
+                                            <img src="./img/icons/facebook.png" alt="фэйсбук">
                                         </a>
                                     </li>
                                     <li class="webitem a2">
                                         <a href="">
-                                            <img src="./img/icons/twitter.png" alt="">
+                                            <img src="./img/icons/twitter.png" alt="твиттер">
                                         </a>
                                     </li>
                                     <li class="webitem a3">
                                         <a href="">
-                                            <img src="./img/icons/pinterest.png" alt="">
+                                            <img src="./img/icons/pinterest.png" alt="пинтерест">
                                         </a>
                                     </li>
                                     <li class="webitem a4">
                                         <a href="">
-                                            <img src="./img/icons/instagram.png" alt="">
+                                            <img src="./img/icons/instagram.png" alt="инста">
                                         </a>
                                     </li>
                                 </ul>
@@ -128,27 +129,27 @@
                 <div class="slave">
                     <div class="slaveb">
                         <div class="train">
-                            <img src="./img/rab2.jpg" alt="" height="470" width="380">
+                            <img src="./img/rab2.jpg" alt="тело2" height="470" width="380">
                             <div class="shadow">
                                 <ul class="webs">
                                     <li class="webitem a1">
                                         <a href="">
-                                            <img src="./img/icons/facebook.png" alt="">
+                                            <img src="./img/icons/facebook.png" alt="фэйсбук">
                                         </a>
                                     </li>
                                     <li class="webitem a2">
                                         <a href="">
-                                            <img src="./img/icons/twitter.png" alt="">
+                                            <img src="./img/icons/twitter.png" alt="твиттер">
                                         </a>
                                     </li>
                                     <li class="webitem a3">
                                         <a href="">
-                                            <img src="./img/icons/pinterest.png" alt="">
+                                            <img src="./img/icons/pinterest.png" alt="пинтерест">
                                         </a>
                                     </li>
                                     <li class="webitem a4">
                                         <a href="">
-                                            <img src="./img/icons/instagram.png" alt="">
+                                            <img src="./img/icons/instagram.png" alt="инста">
                                         </a>
                                     </li>
                                 </ul>
@@ -161,27 +162,27 @@
                 <div class="slave">
                     <div class="slaveb">
                         <div class="train">
-                            <img src="./img/rab3.jpg" alt="" height="470" width="380">
+                            <img src="./img/rab3.jpg" alt="тело3" height="470" width="380">
                             <div class="shadow">
                                 <ul class="webs">
                                     <li class="webitem a1">
                                         <a href="">
-                                            <img src="./img/icons/facebook.png" alt="">
+                                            <img src="./img/icons/facebook.png" alt="фэйсбук">
                                         </a>
                                     </li>
                                     <li class="webitem a2">
                                         <a href="">
-                                            <img src="./img/icons/twitter.png" alt="">
+                                            <img src="./img/icons/twitter.png" alt="твиттер">
                                         </a>
                                     </li>
                                     <li class="webitem a3">
                                         <a href="">
-                                            <img src="./img/icons/pinterest.png" alt="">
+                                            <img src="./img/icons/pinterest.png" alt="пинтесрест">
                                         </a>
                                     </li>
                                     <li class="webitem a4">
                                         <a href="">
-                                            <img src="./img/icons/instagram.png" alt="">
+                                            <img src="./img/icons/instagram.png" alt="инста">
                                         </a>
                                     </li>
                                 </ul>
