--- a/homework-07/index.html
+++ b/homework-07/index.html
@@ -43,26 +43,17 @@
             </p>
             <div class="d_services">
                 <div class="service">
-                    <div class="img">
-                        <img src="./img/icons/icon-basket.png" alt="корзина">
-                    </div>
-                    <h3 class="h_service">e-Commerce</h3>
+                    <h3 class="h_service s1">e-Commerce</h3>
                     <p class="p_service">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere
                         odio in tincidunt.</p>
                 </div>
                 <div class="service">
-                    <div class="img">
-                        <img src="./img/icons/icon-laptop.png" alt="ноутбук">
-                    </div>
-                    <h3 class="h_service">responsive web</h3>
+                    <h3 class="h_service s2">responsive web</h3>
                     <p class="p_service">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere
                         odio in tincidunt.</p>
                 </div>
                 <div class="service">
-                    <div class="img">
-                        <img src="./img/icons/icon-locked.png" alt="замок">
-                    </div>
-                    <h3 class="h_service">web security</h3>
+                    <h3 class="h_service s3">web security</h3>
                     <p class="p_service">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere
                         odio in tincidunt.</p>
                 </div>
